# LLVM-Tracer

./: CMakeLists.txt  LICENSE  Makefile  README.md
ast-pass/: CMakeLists.txt  GetLabeledStmts.cpp  test.c  test.cpp
cmake-scripts/: TracerConfig.cmake  buildBitcode.cmake  buildTracerBitcode.cmake  findAndSetLLVM.cmake
cmake-scripts/AutoInstaller/: CMakeLists.txt  LLVMPatchVersion.cmake  LLVM_MD5.cmake  installLLVM.cmake
cmake-scripts/LLVMFinder/: findLLVM.cmake  loadLLVMConfig.cmake  loadLLVMModule.cmake
example/: CMakeLists.txt
example/triad/: CMakeLists.txt  llvm_compile.py  triad.c
full-trace/: CMakeLists.txt  Makefile  SlotTracker.h  full_trace.cpp  full_trace.h
playground/: Makefile  Makefile.tracer  README.md  multithreading.cc  test.c  test.cc
profile-func/: CMakeLists.txt  Makefile  trace_logger.c  trace_logger.cpp  trace_logger.h  trace_logger_aladdin.h
scripts/: TracerConfig.cmake  buildBitcode.cmake  buildTracerBitcode.cmake  findAndSetLLVM.cmake
scripts/AutoInstaller/: LLVMPatchVersion.cmake  installLLVM.cmake
scripts/LLVMFinder/: findLLVM.cmake  findLLVMTools.cmake  loadLLVMModule.cmake
